infinileap-binding: Adapt to changes in infinileap and Project Panama